Users can either add new daily habits to the goal or select from existing ones.
To help users remember to track their habits, a prompt appears in the sidebar navigation next to the "Habits" item. This prompt will show up if the user hasn't visited the "Habits" page that day.
Added a line to the weekly project report chart to display budgeted time for selected projects or total budgeted time for all projects.
Updated the projects page to display not only the emoji and name, but also the budget, goal, and "Mon-Fri" label for workday projects.
"Report" subpage was moved from "Projects" page to a dedicated "Timesheet" page for easier access.
1728708465131
Users can now expedite the creation of recurring tasks ahead of schedule by using the 'Create Now' button found in the 'Upcoming' tab of the 'Tasks' page.
Users can now see on the 'Upcoming' tab of the 'Tasks' page when their recurring task will actually be created.
Focus launcher automatically adjusts the focus duration, targeting 90-minute blocks.
An "info" page that will serve as a knowledge base of the app where the user can find an information about Increaser tools. For now it only includes an article about focus tool.
No delay when adding a task or a project from a focus launcher.
1728054756723
An option to change the end time when finishing a focus session is helpful when the user forgets to stop the session and wants to adjust the end time.
If a session went for too long and Increaser stopped it automatically, the app will open an editor where the user can easily adjust auto-stopped session end time.
A more comfortable focus sounds navigation.
When adding a YouTube video to focus sounds, you can see a preview of the video, and the name will be filled in automatically based on the YouTube video's title.
1727537960954
Added the ability to set both start and end boundaries in the project's report interval selector.