@@ -1,0 +1,13 @@
+Hey everyone, Radzion here. Let's jump right into the latest updates for Increaser.
+
+First, you can now connect your goals to your habits. This means you can add new habits right from the goal view or link an existing habit to a goal. It's all about making it easier to track progress toward what really matters.
+
+Next, to help you remember to track your habits, we've added a gentle nudge in the sidebar. If you haven't visited the "Habits" page today, you'll see a prompt next to it in the navigation. Just a quick reminder to keep those habits going.
+
+We've also updated the weekly project report chart. Now, you can see a line showing the budgeted time for your selected projects, or the total budgeted time for all projects if you want the bigger picture. It's a small addition that should give you better insights into how you're pacing yourself.
+
+The projects page also got a refresh. Now, each project displays not only its emoji and name but also its budget, goal, and a "Mon-Fri" label for workday-only projects. Plus, when creating or editing a project, you can set a weekly budget and goal right then and there. It's all about giving you more clarity and control over your work.
+
+Finally, we moved the "Report" subpage from the "Projects" page to its own dedicated "Timesheet" page. This should make it easier to access and understand your overall work time.
+
+That's it for now. I hope these updates make your experience with Increaser even better. Try them out and let me know what you think. Your feedback is always welcome.
